Updated version to 0.04 for 25 Jun 2008 release Use Module::Build::DistVersion for packaging   Moved My_Build.pm to tools/ Minor documentation cleanup

--- a/tools/README.tt
+++ b/tools/README.tt
@@ -1,5 +1,6 @@
-$$Id$
-PostScript::Calendar version $%v%$
+[% # $Id$ %]
+PostScript::Calendar version [%version%], released [%date%]
+
 
 PostScript::Calendar generates printable calendars using PostScript.
 
@@ -34,6 +35,14 @@ DEPENDENCIES
 
 To display phases of the moon:
   Astro::MoonPhase   0.60
+
+
+
+CHANGES
+    Here's what's new in version [%version%] of PostScript::Calendar:
+    (See the file "Changes" for the full revision history.)
+
+[%changes%]
 
 
 
